fixed Card menus on the right-hand column cut off by the edge of the page or the bottom of the page

--- a/BARD/web-app/css/bootstrap-plus.css
+++ b/BARD/web-app/css/bootstrap-plus.css
@@ -57,6 +57,7 @@
 }
 
 .cardMenu {
-	float:right;
+	float:left;
  	width:7%;
+    text-align:left;
 }
